...
    )

    // Wrap the entire screen in a Column with testTag
    Column(
        modifier = Modifier
            .fillMaxSize()
            .testTag("dashboardScreen") // NOW it wraps everything
    ) {
        Scaffold(
            topBar = {
                CenterAlignedTopAppBar(
                    colors = TopAppBarDefaults.centerAlignedTopAppBarColors(
                        containerColor = LightBlue,
...
